plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.15'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.pes'
version = '0.0.1-SNAPSHOT'
apply plugin: 'war'

java {
	sourceCompatibility = '1.8'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2:2.7.14'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'

	// MyBatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.1'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.1'

	// Tomcat and JSTL
	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
	implementation 'javax.servlet:jstl'

	// Log4jdbc
	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'

	// POI
	implementation 'org.apache.poi:poi:4.1.2'
	implementation 'org.apache.poi:poi-ooxml:4.1.2'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Oracle JDBC
	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-inline:5.2.0'
	test {
		useJUnitPlatform()
	}

	// Jdbc
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'

	// H2 Database
	runtimeOnly 'com.h2database:h2'

	// 기존 logback -> log4j2 전환
	modules {
		module('org.springframework.boot:spring-boot-starter-logging') {
			replacedBy('org.springframework.boot:spring-boot-starter-log4j2')
		}
	}
}
